--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,21 @@
     text-align: center;
     padding: 20px;
   }
-  
+::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar
+{
+	width: 6px;
+  height: 6px;
+	background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
   .search-container {
     margin-bottom: 20px;
   }
@@ -12,7 +26,7 @@
     padding: 10px;
     font-size: 16px;
     margin-right: 10px;
-    width: 300px;
+    width: 40%;
   }
   
   .search-container button {
@@ -84,6 +98,8 @@
   
   .forecast-container {
     margin-top: 20px;
+    overflow: hidden;
+    overflow-x: scroll;
   }
   
   .forecast-row {
@@ -92,59 +108,15 @@
   
   .forecast-boxes {
     display: flex;
-    flex-wrap: nowrap; /* Prevent wrapping of boxes */
-    justify-content: space-between; /* Distribute space evenly */
+    flex-wrap: nowrap; 
+    justify-content: space-between; 
     gap: 10px;
-  }
-  
-  .forecast-box {
-    flex: 1 0 calc((100% - 70px) / 8); /* 8 boxes with gaps of 10px between them */
-    max-width: calc((100% - 70px) / 8);
-    min-width: 100px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-    background-color: #f9f9f9;
-  }
-
-  .date-box {
-    flex: 1 0 calc((100% - 70px) / 16); /* 8 boxes with gaps of 10px between them */
-    max-width: calc((100% - 70px) / 16);
-    min-width: 100px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    padding: 10px;
-    text-align: center;
-    background-color: #f9f9f9;
-  }
-  
-  .forecast-box p {
-    margin: 5px 0;
-    font-size: 14px;
-    flex-wrap: nowrap;
-  }
-
-  .date-box p {
-    margin: 5px 0;
-    font-size: 14px;
-    flex-wrap: nowrap;
   }
   
   .empty-box {
     color: #999;
     font-style: italic;
   }  
-  
-  @media (max-width: 768px) {
-    .city-details {
-      flex-direction: column;
-    }
-  
-    .city-details p {
-      flex: 1 1 100%;
-    }
-  }
   
   .toggle-switch {
     display: flex;
@@ -202,3 +174,52 @@
     font-size: 16px;
   }
   
+
+body {
+  background-color: #f0f4f8;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+.forecast-box {
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  margin: 5px;
+  font-size: 14px;
+  flex-wrap: nowrap;
+  flex: 1 0 calc((100% - 70px) / 8); 
+  max-width: calc((100% - 70px) / 8);
+  min-width: 100px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  text-align: center;
+  background-color: #f9f9f9;
+}
+
+.forecast-box:hover {
+  transform: scale(1.05);
+  background-color: #e0e7ff;
+}
+
+.weather-info h2, .forecast-info h2 {
+  font-size: 24px;
+  color: #0056b3;
+}
+
+.forecast-item p {
+  font-size: 16px;
+}
+
+button {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
